# my-obelisk-app

./: .gitignore  default.nix
backend/: backend.cabal
backend/src/: Backend.hs
backend/src/Backend/: Claim.hs  Config.hs  Database.hs  Errors.hs  Login.hs  Monad.hs  Validation.hs
backend/src/Backend/Database/: Packages.hs  Tags.hs  Users.hs
backend/src/Backend/Database/Tags/: Tag.hs
backend/src/Backend/Database/Users/: Follow.hs  User.hs
common/: common.cabal
common/src/Common/: Api.hs  Route.hs  Types.hs
common/src/Common/Api/: Attribute.hs  Errors.hs  Namespace.hs  Packages.hs  Profiles.hs  Tags.hs  User.hs  Users.hs  Validation.hs
common/src/Common/Api/Profiles/: Profile.hs
common/src/Common/Api/User/: Account.hs  Update.hs
common/src/Common/Api/Users/: Credentials.hs  Registrant.hs
common/src/Common/Facebook/Types/: Auth.hs
config/backend/: pgConnStr
config/common/: route
dep/: dep.nix
dep/monad-alter/: default.nix  git.json  update.sh
dep/obelisk-oauth/: default.nix  git.json
dep/servant-reflex/: git.json
dep/servant-snap/: git.json  update.sh
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src/Frontend/: Client.hs  FrontendStateT.hs  Head.hs  HomePage.hs  Login.hs  Nav.hs  Package.hs  PackagePreview.hs  Profile.hs  Register.hs  Search.hs  Settings.hs  Util.hs
frontend/src/Frontend/Client/: Internal.hs
static/: main.css
